Update A with step=1

--- a/jwang/notes2/ev_ssm2.ipynb
+++ b/jwang/notes2/ev_ssm2.ipynb
@@ -245,7 +245,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***TODO***"
+    "fcs: C -> I\n",
+    "\n",
+    "fis: I -> C\n",
+    "\n",
+    "fds: D -> I"
    ]
   },
   {
@@ -271,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -467,8 +471,8 @@
     "        \"\"\"\n",
     "        Update time and time series.\n",
     "        \"\"\"\n",
-    "        if abs(ts - self.ts) < self.step/3600:\n",
-    "            logger.warning(f\"{self.name}: {ts}[H] is too close to current time={self.ts}[H]\")\n",
+    "        if abs(ts - self.ts) < 0.1 * self.step/3600:\n",
+    "            logger.warning(f\"{self.name}: {ts}[H] is too close to current time={self.ts} [H]\")\n",
     "        else:\n",
     "            self.tss.append(ts)\n",
     "            ts = ts if ts < 24 else ts-24\n",
@@ -782,8 +786,18 @@
     "        self.ev['c'] = self.ev[['u', 'c', 'soc']].apply(\n",
     "            lambda x: 1 if (x[2] < self.sl) & (x[1] == -1) else x[1], axis=1)\n",
     "        # demanded SoC, C -> I\n",
-    "        self.ev['c'] = self.ev[['u', 'c', 'soc', 'socd']].apply(\n",
-    "            lambda x: 1 if (x[2] >= x[3]) & (x[1] == 1) else x[1], axis=1)\n",
+    "        # self.ev['c'] = self.ev[['u', 'c', 'soc', 'socd']].apply(\n",
+    "        #     lambda x: 1 if (x[2] >= x[3]) & (x[1] == 1) else x[1], axis=1)\n",
+    "\n",
+    "        # record control signal\n",
+    "        self.ev['c2'] = self.ev['c'].replace({1: 0, 0: 1, -1: 2})\n",
+    "        self.ev['c0'] = self.ev['c2']\n",
+    "        self.ev[['c', 'c2', 'c0']] = self.ev[['c', 'c2', 'c0']].astype(int)\n",
+    "\n",
+    "        # --- update x ---\n",
+    "        self.find_sx()\n",
+    "        self.g_x()\n",
+    "        self.g_xl()\n",
     "\n",
     "        for t in tqdm(np.arange(self.ts+t_step, tf, t_step), desc=f'{self.name} MCS'):\n",
     "            self.ts = self.g_ts(t)\n",
@@ -799,20 +813,23 @@
     "            self.ev['soc'] = self.ev['soc'].apply(lambda x: x if x > self.socl else self.socl)\n",
     "            self.ev['soc'] = self.ev.soc + t_step * self.ev['dP'] / self.ev['Q']\n",
     "            # --- boundary ---\n",
-    "            self.ev['bd'] = self.ev.soc.apply(lambda x: 1 if (x <= self.sl) | (x >= self.su) else 0)\n",
+    "            self.ev['bd'] = self.ev[['soc', 'socd']].apply(\n",
+    "                lambda x: 1 if (x[0] <= self.sl) | (x[0] >= x[1]) else 0)\n",
     "\n",
     "            # record control signal\n",
     "            self.ev['c2'] = self.ev['c'].replace({1: 0, 0: 1, -1: 2})\n",
     "            self.ev['c0'] = self.ev['c2']\n",
+    "            # format\n",
+    "            self.ev[['c', 'c2', 'c0']] = self.ev[['c', 'c2', 'c0']].astype(int)\n",
     "            # update control signal\n",
     "            # offline -> I\n",
     "            self.ev['c'] = self.ev[['u', 'c']].apply(lambda x: x[1] if x[0] != 0 else 0, axis=1)\n",
     "            # sl, DC -> C\n",
     "            self.ev['c'] = self.ev[['u', 'c', 'soc']].apply(\n",
     "                lambda x: 1 if (x[2] < self.sl) & (x[1] == -1) else x[1], axis=1)\n",
-    "            # su, C -> I\n",
-    "            self.ev['c'] = self.ev[['u', 'c', 'soc']].apply(\n",
-    "                lambda x: 1 if (x[2] > self.su) & (x[1] == 1) else x[1], axis=1)\n",
+    "            # demanded SoC, C -> I\n",
+    "            self.ev['c'] = self.ev[['u', 'c', 'soc', 'socd']].apply(\n",
+    "                lambda x: 1 if (x[2] >= x[3]) & (x[1] == 1) else x[1], axis=1)\n",
     "\n",
     "            # --- update x ---\n",
     "            self.find_sx()\n",
@@ -956,14 +973,16 @@
     "        else:\n",
     "            pass\n",
     "            self.r_agc(Pi=Pi)\n",
-    "        # TODO: revise control may have conflict with `r_agc`?\n",
+    "            # TODO: revise control may have conflict with `r_agc`?\n",
+    "            # --- revise control ---\n",
+    "            # `CS` for low charged EVs\n",
+    "            self.ev['c'] = self.ev[['soc', 'c']].apply(\n",
+    "                lambda x: 1 if x[0] <= self.sl else x[1], axis=1)\n",
+    "\n",
     "        # --- revise control ---\n",
-    "        # `CS` for low charged EVs\n",
-    "        self.ev['c'] = self.ev[['soc', 'c']].apply(\n",
-    "            lambda x: 1 if x[0] <= self.sl else x[1], axis=1)\n",
-    "        # `IS` for demanded SoC EVs\n",
+    "        # `IS` for demanded charging SoC EVs\n",
     "        self.ev['c'] = self.ev[['soc', 'c', 'socd']].apply(\n",
-    "            lambda x: 0 if x[0] >= x[2] else x[1], axis=1)\n",
+    "            lambda x: 0 if (x[0] >= x[2]) & (x[1] == 1) else x[1], axis=1)\n",
     "        # `IS` for offline EVs\n",
     "        self.ev['c'] = self.ev[['c', 'u']].apply(\n",
     "            lambda x: x[0]*x[1], axis=1)\n",
@@ -1178,7 +1197,7 @@
     "            # --- record output ---\n",
     "            y0 = self.ep()[0]  # self.Pt\n",
     "            self.x0 = self.x0 + np.matmul(self.B, u) + np.matmul(self.C, v)\n",
-    "            self.Pr = self.ep()[0] - y0 + self.Pr # y - y0\n",
+    "            self.Pr = self.ep()[0] - y0 + self.Pr  # y - y0\n",
     "\n",
     "    def g_agc(self, Pi):\n",
     "        \"\"\"\n",
@@ -1304,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1315,18 +1334,16 @@
       "Online 1983, Q=49.73 MWh, SoC=0.9834\n",
       "Power(MW): Pt=-0.3613, Pc=-0.3613, Pd=-0.0\n",
       "Ctrl: 0=1921; 1=62; \n",
-      "SSE1 MCS: 100%|██████████| 89/89 [00:49<00:00,  1.80it/s]\n",
-      "/var/folders/06/z8ws9b2d733f7h6yc5qpn22w0000gn/T/ipykernel_27758/2105074974.py:635: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  self.A = A0 / row_sum\n"
+      "SSE1 MCS: 100%|██████████| 360/360 [03:06<00:00,  1.93it/s]\n"
      ]
     }
    ],
    "source": [
-    "sse = ev_ssm(ts=10, N=10000, step=4, tp=100,\n",
+    "sse = ev_ssm(ts=10, N=10000, step=1, tp=100,\n",
     "             lr=0.1, lp=100, seed=2022, name=\"SSE1\")\n",
     "\n",
     "# --- build and save A matrix ---\n",
-    "sse.test(tf=10.1)"
+    "sse.test(tf=10.1)\n"
    ]
   },
   {
@@ -1335,92 +1352,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with plt.style.context(['ieee']):\n",
-    "    fig, ax = plt.subplots(1, 1, figsize=(6, 6), dpi=100)\n",
-    "    ax.spy(sse.A, markersize=4, marker='o',\n",
-    "           markerfacecolor='orange', markeredgecolor='orange')\n",
-    "    ax.grid(which='major', alpha=1)\n",
-    "    ax.grid(which='minor', alpha=1)\n",
-    "    ax.set_xlim(0, 3*sse.Ns-1)\n",
-    "    ax.set_ylim(3*sse.Ns-1, 0)\n",
-    "    ax.set_title(\"Spy of mat $A$\")\n",
-    "    ax.minorticks_on()\n",
-    "\n",
-    "    ax.set_xlabel('$\\mathbf{x}(k)$')\n",
-    "    ax.xaxis.set_label_position('top')\n",
-    "    ax.set_ylabel('$\\mathbf{x}(k+1)$')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step IV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sse = ev_ssm(ts=10, N=10000, step=4, tp=100,\n",
+    "sse = ev_ssm(ts=10, N=10000, step=1, tp=100,\n",
     "             lr=0.1, lp=100, seed=2022, name=\"SSE1\")\n",
     "sse.load_A(\"Aests.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SSE1: Save A to Aests.csv.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sdmax = sse.ev.socd.max()\n",
-    "sdmin = sse.ev.socd.min()\n",
-    "Qave = sse.ev.Q.mean() / 1000\n",
-    "ncave = sse.ev.nc.mean()\n",
-    "Thalf = (sdmax - sdmin) * Qave / (2 * sse.Pave * ncave)\n",
-    "\n",
-    "k = int(Thalf * 3600 / 4)\n",
-    "\n",
-    "An = np.linalg.matrix_power(sse.A, k)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fcs = np.diagonal(An[20:40, 0:20])\n",
-    "plt.plot(range(20), fcs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fis = np.diagonal(An[0:20, 20:40])\n",
-    "plt.plot(range(20), fis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fds = np.diagonal(An[20:40, 0:20])\n",
-    "plt.plot(range(20), fds)"
+    "sse.save_A(\"Aests.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test AGC Ctrl"
+    "### Test AGC Ctrl"
    ]
   },
   {
@@ -1489,7 +1457,174 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Step4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The definition of soc efficient does not make sense?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sse = ev_ssm(ts=10, N=10000, step=4, tp=100,\n",
+    "             lr=0.1, lp=100, seed=2022, name=\"SSE1\")\n",
+    "\n",
+    "# --- build and save A matrix ---\n",
+    "sse.test(tf=10.1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with plt.style.context(['ieee']):\n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(6, 6), dpi=100)\n",
+    "    ax.spy(sse.A, markersize=4, marker='o',\n",
+    "           markerfacecolor='orange', markeredgecolor='orange')\n",
+    "    ax.grid(which='major', alpha=1)\n",
+    "    ax.grid(which='minor', alpha=1)\n",
+    "    ax.set_xlim(0, 3*sse.Ns-1)\n",
+    "    ax.set_ylim(3*sse.Ns-1, 0)\n",
+    "    ax.set_title(\"Spy of mat $A$\")\n",
+    "    ax.minorticks_on()\n",
+    "\n",
+    "    ax.set_xlabel('$\\mathbf{x}(k)$')\n",
+    "    ax.xaxis.set_label_position('top')\n",
+    "    ax.set_ylabel('$\\mathbf{x}(k+1)$')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sdmax = sse.ev.socd.max()\n",
+    "sdmin = sse.ev.socd.min()\n",
+    "Qave = sse.ev.Q.mean() / 1000\n",
+    "ncave = sse.ev.nc.mean()\n",
+    "Thalf = (sdmax - sdmin) * Qave / (2 * sse.Pave * ncave)\n",
+    "\n",
+    "k = int(Thalf * 3600 / 4)\n",
+    "\n",
+    "An = np.linalg.matrix_power(sse.A, k)\n",
+    "\n",
+    "fcs = np.diagonal(An[20:40, 0:20])\n",
+    "fis = np.diagonal(An[0:20, 20:40])\n",
+    "fds = np.diagonal(An[40:60, 20:40])\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "ax.plot(range(20), fcs, label='CS')\n",
+    "ax.plot(range(20), fis, label='IS')\n",
+    "ax.plot(range(20), fds, label='DS')\n",
+    "ax.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sse = ev_ssm(ts=10, N=10000, step=4, tp=100,\n",
+    "             lr=0.1, lp=100, seed=2022, name=\"SSE1\")\n",
+    "sse.load_A(\"Aests.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sdmax = sse.ev.socd.max()\n",
+    "sdmin = sse.ev.socd.min()\n",
+    "Qave = sse.ev.Q.mean() / 1000\n",
+    "ncave = sse.ev.nc.mean()\n",
+    "Thalf = (sdmax - sdmin) * Qave / (2 * sse.Pave * ncave)\n",
+    "\n",
+    "k = int(Thalf * 3600 / 4)\n",
+    "\n",
+    "An = np.linalg.matrix_power(sse.A, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Misc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sse = ev_ssm(ts=10, N=10000, step=1, tp=100,\n",
+    "#              lr=0.1, lp=100, seed=2022, name=\"SSE1\")\n",
+    "\n",
+    "# # --- build and save A matrix ---\n",
+    "# sse.test(tf=10.1)\n",
+    "# sse.save_A(\"Aests.csv\")\n",
+    "\n",
+    "# --- load A matrix ---\n",
+    "# sse.load_A(\"Aests.csv\")\n",
+    "\n",
+    "# --- run MCS ---\n",
+    "# sse.run(tf=10.1, is_update=True, is_record=True)\n",
+    "\n",
+    "# --- plot results ---\n",
+    "# fig, ax = sse.plot()\n",
+    "\n",
+    "# --- test A matrix stability ---\n",
+    "# sse.g_res(x0=sse.x0.copy(), n=1000)\n",
+    "# print(np.sum(sse.x0))\n",
+    "\n",
+    "# sse.reset(tnow=10, clean_xl=False)\n",
+    "\n",
+    "# --- continually run ---\n",
+    "# for tf in np.arange(10, 10.1, 4/3600):\n",
+    "#     sse.run(tf=tf, is_update=True, is_record=True, is_test=False)\n",
+    "\n",
+    "# --- spy A ---\n",
+    "# with plt.style.context(['ieee']):\n",
+    "#     fig, ax = plt.subplots(1, 1, figsize=(6, 6), dpi=100)\n",
+    "#     ax.spy(sse.A, markersize=4, marker='o',\n",
+    "#            markerfacecolor='orange', markeredgecolor='orange')\n",
+    "#     ax.grid(which='major', alpha=1)\n",
+    "#     ax.grid(which='minor', alpha=1)\n",
+    "#     ax.set_xlim(0, 3*sse.Ns-1)\n",
+    "#     ax.set_ylim(3*sse.Ns-1, 0)\n",
+    "#     ax.set_title(\"Spy of mat $A$\")\n",
+    "#     ax.minorticks_on()\n",
+    "\n",
+    "#     ax.set_xlabel('$\\mathbf{x}(k)$')\n",
+    "#     ax.xaxis.set_label_position('top')\n",
+    "#     ax.set_ylabel('$\\mathbf{x}(k+1)$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spy An"
    ]
   },
   {
@@ -1571,109 +1706,6 @@
     "ax.set_ylim(3*sse.Ns-1, 0)\n",
     "ax.set_title(\"Spy state transition matrix $A$\")\n",
     "ax.minorticks_on()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- plot online EV numbers ---\n",
-    "sse = ev_ssm(N=10000, ts=0, name='SSE0', seed=2022)\n",
-    "time = np.arange(0, 24, 0.1)\n",
-    "num = []\n",
-    "for t in time:\n",
-    "    sse.ts = sse.g_ts(t)\n",
-    "    sse.g_u()\n",
-    "    num.append(sse.ne)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(time, num)\n",
-    "ax.set_title('Number of online EVs')\n",
-    "ax.set_xlabel('Time [h]')\n",
-    "ax.legend(['Online EV', 'Online capacity'])\n",
-    "ax.set_xlim(0, 24)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # --- plot online EV numbers ---\n",
-    "# # time = np.arange(0, 24, 0.1)\n",
-    "# # num = []\n",
-    "# # for t in time:\n",
-    "# #     sse.g_u(t)\n",
-    "# #     num.append(sse.ne)\n",
-    "\n",
-    "# # fig, ax = plt.subplots()\n",
-    "# # ax.plot(time, num)\n",
-    "# # ax.set_title('Number of online EVs')\n",
-    "# # ax.set_xlabel('Time [h]')\n",
-    "# # ax.legend(['Online EV', 'Online capacity'])\n",
-    "# # ax.set_xlim(0, 24)\n",
-    "\n",
-    "# # update g_x()\n",
-    "\n",
-    "# # # reset sse\n",
-    "# # sse.reset(tnow=10)\n",
-    "# # sse.ev\n",
-    "\n",
-    "# # --- Analytical method ---\n",
-    "# data = sse.ev.copy()\n",
-    "# data['dsc'] = data.Pc * data.nc / data.Q / 6\n",
-    "# data['dsd'] = data.Pc * data.nc / data.Q / 1\n",
-    "# data[['dsc', 'dsd']].plot(kind='kde')\n",
-    "\n",
-    "# kde = stats.gaussian_kde(data.dsc)\n",
-    "# for i in range(-1,18,1):\n",
-    "#     lb = 0.05+0.05*i\n",
-    "#     ub = 0.1+0.05*i\n",
-    "#     ires = kde.integrate_box(lb, ub)\n",
-    "#     # print(np.round(ires, 4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# xdf = pd.DataFrame(xres)\n",
-    "# from hmmlearn import hmm\n",
-    "# gen_model = hmm.GaussianHMM(n_components=60, covariance_type=\"full\")\n",
-    "\n",
-    "\n",
-    "# sse.reset(tnow=0)\n",
-    "# xres = []\n",
-    "# xres.append(sse.x.values())\n",
-    "# for t in np.arange(0, 24, 300/3600):\n",
-    "#     sse.act(t=300, tnow=t)\n",
-    "#     xres.append(sse.x.values())\n",
-    "# xdf = pd.DataFrame(xres)\n",
-    "\n",
-    "\n",
-    "# gen_model.fit(pd.concat([xdf]*100).reset_index(drop=True))\n",
-    "# gen_model.predict_proba(xdf.iloc[2].values.reshape(1, -1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get the x res by iterate EV from t=0 to t=14.01\n",
-    "# sse.reset(tnow=0)\n",
-    "# x_res = []\n",
-    "# for i, t in enumerate(np.arange(0, 14.01, 1/12)):\n",
-    "#     sse.act(t=300, tnow=t)\n",
-    "#     x_res.append(sse.x.tolist())\n",
-    "\n",
-    "# pd.DataFrame(x_res).plot(legend=True)"
    ]
   },
   {
