[WIP] soc adapt coeff

--- a/jwang/notes2/ev_ssm2.ipynb
+++ b/jwang/notes2/ev_ssm2.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1359,20 +1359,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'fun_is' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/jinningwang/Documents/work/andes/jwang/notes2/ev_ssm2.ipynb Cell 21'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jinningwang/Documents/work/andes/jwang/notes2/ev_ssm2.ipynb#ch0000090?line=0'>1</a>\u001b[0m sse\u001b[39m.\u001b[39;49msac(\u001b[39m0.1\u001b[39;49m)\n",
-      "\u001b[1;32m/Users/jinningwang/Documents/work/andes/jwang/notes2/ev_ssm2.ipynb Cell 20'\u001b[0m in \u001b[0;36mev_ssm.sac\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m   <a href='vscode-notebook-cell:/Users/jinningwang/Documents/work/andes/jwang/notes2/ev_ssm2.ipynb#ch0000019?line=1013'>1014</a>\u001b[0m fun_fds \u001b[39m=\u001b[39m [\u001b[39mlambda\u001b[39;00m x: k4\u001b[39m*\u001b[39mx,\n\u001b[1;32m   <a href='vscode-notebook-cell:/Users/jinningwang/Documents/work/andes/jwang/notes2/ev_ssm2.ipynb#ch0000019?line=1014'>1015</a>\u001b[0m            \u001b[39mlambda\u001b[39;00m x: k4\u001b[39m*\u001b[39mx,\n\u001b[1;32m   <a href='vscode-notebook-cell:/Users/jinningwang/Documents/work/andes/jwang/notes2/ev_ssm2.ipynb#ch0000019?line=1015'>1016</a>\u001b[0m            \u001b[39mlambda\u001b[39;00m x: \u001b[39m0.5\u001b[39m]\n\u001b[1;32m   <a href='vscode-notebook-cell:/Users/jinningwang/Documents/work/andes/jwang/notes2/ev_ssm2.ipynb#ch0000019?line=1017'>1018</a>\u001b[0m fcs \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mpiecewise(x, conds, fun_cs)\n\u001b[0;32m-> <a href='vscode-notebook-cell:/Users/jinningwang/Documents/work/andes/jwang/notes2/ev_ssm2.ipynb#ch0000019?line=1018'>1019</a>\u001b[0m fis \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mpiecewise(x, conds, fun_is)\n\u001b[1;32m   <a href='vscode-notebook-cell:/Users/jinningwang/Documents/work/andes/jwang/notes2/ev_ssm2.ipynb#ch0000019?line=1019'>1020</a>\u001b[0m fds \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mpiecewise(x, conds, fun_ds)\n\u001b[1;32m   <a href='vscode-notebook-cell:/Users/jinningwang/Documents/work/andes/jwang/notes2/ev_ssm2.ipynb#ch0000019?line=1021'>1022</a>\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39marray([fcs, fis, fds])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'fun_is' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([1.        , 0.07141924, 0.05561645])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
