[WIP] Fix r_agc

--- a/jwang/notes2/ev_ssm.ipynb
+++ b/jwang/notes2/ev_ssm.ipynb
@@ -18,12 +18,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EV Class"
+    "### EV SSM Class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,11 @@
     "        # --- find single EV sx ---\n",
     "        self.ev['sx'] = self.ev['soc'].apply(lambda x: find_x(x, self.soc_intv))\n",
     "\n",
-    "        # --- find SSM X ---\n",
+    "        # --- update c2 ---\n",
+    "        self.ev['c2'] = self.ev['c'].replace({1: 0, 0: 1, -1: 2})\n",
+    "\n",
+    "        # --- output tab ---\n",
+    "        # TODO: consider low charged path?\n",
     "        states = self.ev[['c2', 'sx', 'u']].apply(lambda x: (x[0], x[1]) if x[2] else (-1, -1), axis=1)\n",
     "        res = dict(states.value_counts())\n",
     "        self.xtab = pd.DataFrame(columns=range(self.Ns), index=[0, 1, 2], data=0)\n",
@@ -440,6 +444,7 @@
     "                self.xtab.loc[key[0], key[1]] = res[key]\n",
     "        self.xtab.fillna(0, inplace=True)\n",
     "\n",
+    "        # TODO: use estimated ne rather than actual ne?\n",
     "        self.rtab = self.xtab.div(self.ne)\n",
     "        return True\n",
     "\n",
@@ -782,6 +787,7 @@
     "        col = ['u', 'u0',  'soc', 'bd', 'c', 'c2', 'c0', 'sx', 'dP', 'xl',\n",
     "               'soci', 'socd', 'Pc', 'Pd', 'nc', 'nd', 'Q', 'ts', 'tf']\n",
     "        self.ev = self.ev[col]\n",
+    "        # TODO: c0?\n",
     "        self.ev['c2'] = self.ev['c'].replace({1: 0, 0: 1, -1: 2})\n",
     "        self.ev['dP'] = 0\n",
     "        if clean_xl:\n",
@@ -933,8 +939,6 @@
     "            # --- act ---\n",
     "            u, v, us, vs = self.g_agc(Pi - self.Pr)\n",
     "            self.ev.c = self.ev[['u', 'c', 'sx']].apply(lambda x: ev_agc(x, us, vs), axis=1)\n",
-    "            # record control signal\n",
-    "            self.ev['c2'] = self.ev['c'].replace({1: 0, 0: 1, -1: 2})\n",
     "            self.g_x()\n",
     "\n",
     "            # --- record output ---\n",
@@ -1061,8 +1065,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BUG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. To response a large AGC, all the EVs should be switched to DS, but now some remains IS.\n",
+    "2. `rtab` is not corrected."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1104,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1921\n",
+       "1      62\n",
+       "Name: c, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sse.ev[sse.ev.u==1].c.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1263,7 @@
        "2  0.000000  0.000000  0.000000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1294,7 @@
        "Name: c, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
