--- a/jwang/notes2/co-sim_ieee39.ipynb
+++ b/jwang/notes2/co-sim_ieee39.ipynb
@@ -101,8 +101,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.6.3.post163.dev0+g2c5ab35d\n",
-      "2.7.0\n"
+      "1.7.0.post151.dev0+gc57f9dd4\n",
+      "2.8.0\n"
      ]
     }
    ],
@@ -66533,9 +66533,9 @@
    "hash": "ef6cb5c8d99d66a3614f491d51fd40cd94c9138687df3d2045e3a510da5efc66"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python3",
    "language": "python",
-   "name": "python3"
+   "name": "andes"
   },
   "language_info": {
    "codemirror_mode": {
@@ -66547,7 +66547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.12"
   },
   "varInspector": {
    "cols": {
