--- a/jwang/notes2/test_ev_ssm.ipynb
+++ b/jwang/notes2/test_ev_ssm.ipynb
@@ -27,14 +27,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "from ev_ssm import ev_ssm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "EVA: ts=10[H], 10000 EVs, Total Q=250.12 MWh\n",
+      "Online 1983, Q=49.73 MWh, SoC=0.9834\n",
+      "Power(MW): Pt=-0.3613, Pc=-0.3613, Pd=-0.0\n",
+      "Ctrl: 0=1921; 1=62; \n",
+      "EVA: Load A from Aest.csv.\n"
+     ]
+    }
+   ],
    "source": [
     "sse = ev_ssm(ts=10, N=10000, step=1, tp=100,\n",
     "             lr=0.1, lp=100, seed=2022, name=\"EVA\")\n",
@@ -43,52 +58,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11.806571184117741, 0.023093537768445416]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sse.ep()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sl = []\n",
-    "for i in range(24):\n",
-    "    sse = ev_ssm(ts=i, N=10000, step=1, tp=100,\n",
-    "             lr=0.1, lp=100, seed=2022, name=\"EVA\")\n",
-    "    sl.append(sse.wsoc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sse.ev.socd.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "plt.plot(range(24), sl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sse.wsoc"
+    "sse.g_frc()"
    ]
   },
   {
@@ -451,9 +436,9 @@
    "hash": "ef6cb5c8d99d66a3614f491d51fd40cd94c9138687df3d2045e3a510da5efc66"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('andes')",
+   "display_name": "Python3",
    "language": "python",
-   "name": "python3"
+   "name": "andes"
   },
   "language_info": {
    "codemirror_mode": {
