[WIP] Add EV in co-sim

--- a/jwang/notes2/co-sim_ieee39_ev.ipynb
+++ b/jwang/notes2/co-sim_ieee39_ev.ipynb
@@ -2843,7 +2843,7 @@
     "# store original generator data\n",
     "ssp_gen0 = ssp.gen.copy()\n",
     "\n",
-    "for end_time in range(t_total): # t_total\n",
+    "for end_time in range(t_total):  # t_total\n",
     "    # --- interval RTED ---\n",
     "    if end_time % intv_ed == 0:\n",
     "        idx_ed = end_time // intv_ed\n",
@@ -2859,14 +2859,14 @@
     "            # get pe from TDS and sort\n",
     "            pe_tds = get_pe(ssa, ssa_gov_idx, ssa_dg_idx, ssa_key2)\n",
     "            pe_tds = pe_tds.merge(ssa_key2,\n",
-    "                                 on='stg_idx', how='right').groupby('stg_idx', as_index=False).sum()\n",
+    "                                  on='stg_idx', how='right').groupby('stg_idx', as_index=False).sum()\n",
     "            p_pre = pe_tds\n",
     "            ssd.gen.p_pre = pd.merge(left=ssd.gen, how='left', on='idx',\n",
-    "                         right=pe_tds[['stg_idx', 'pe']].rename(columns={'stg_idx': 'idx'}))['pe']\n",
+    "                                     right=pe_tds[['stg_idx', 'pe']].rename(columns={'stg_idx': 'idx'}))['pe']\n",
     "        else:\n",
     "            # DCOPF results as the initial previous setpoints\n",
     "            ssd.set_p_pre()\n",
-    "            p_pre = ssd.gen[['idx', 'p_pre']].rename(columns={'p_pre':'pe', 'idx':'stg_idx'})\n",
+    "            p_pre = ssd.gen[['idx', 'p_pre']].rename(columns={'p_pre': 'pe', 'idx': 'stg_idx'})\n",
     "\n",
     "        # def sfr requirements and ev sfr limtis (p.u.)\n",
     "        # Integrate EV; EV limits FROM EVA;\n",
@@ -2878,8 +2878,8 @@
     "        # TODO: Integrate EV; send SFR back to EV\n",
     "\n",
     "        # Reserve SFR and ramp from Generator limits in ``ssp``\n",
-    "        ssp_gen = pd.merge(left=ssp.gen.rename(columns={'name':'stg_idx'}),\n",
-    "                           right=dcres.rename(columns={'gen':'stg_idx'}),\n",
+    "        ssp_gen = pd.merge(left=ssp.gen.rename(columns={'name': 'stg_idx'}),\n",
+    "                           right=dcres.rename(columns={'gen': 'stg_idx'}),\n",
     "                           on='stg_idx', how='left')\n",
     "        # SFR limits\n",
     "        ssp_gen['max_sfr'] = ssp_gen.max_p_mw - ssp_gen.pru * ssp.sn_mva\n",
@@ -2891,8 +2891,8 @@
     "        ssp_gen['max_ramp'] = ssp.sn_mva * (np.array(p_pre_pp) + np.array(ssd.gen.ramp5))\n",
     "        ssp_gen['min_ramp'] = ssp.sn_mva * (np.array(p_pre_pp) - np.array(ssd.gen.ramp5))\n",
     "        # alter generator limits\n",
-    "        ssp.gen.max_p_mw = ssp_gen[['max_sfr','max_ramp']].min(axis=1)\n",
-    "        ssp.gen.min_p_mw = ssp_gen[['min_sfr','min_ramp']].max(axis=1)\n",
+    "        ssp.gen.max_p_mw = ssp_gen[['max_sfr', 'max_ramp']].min(axis=1)\n",
+    "        ssp.gen.min_p_mw = ssp_gen[['min_sfr', 'min_ramp']].max(axis=1)\n",
     "\n",
     "        # --- ACOPF, update setpoints ---\n",
     "        # store setpoints\n",
@@ -2904,7 +2904,7 @@
     "        # run ACOPF\n",
     "        ssp_res = runopp_map(ssp, ssa_key)  # ACOPF resutls\n",
     "        ssp_res['p0'] = p0                  # last setpoints\n",
-    "        ssp_res.fillna(False, inplace=True) # Fill NA wil False\n",
+    "        ssp_res.fillna(False, inplace=True)  # Fill NA wil False\n",
     "\n",
     "        # reset Generator limtis\n",
     "        ssp.gen.max_p_mw = ssp_gen0.max_p_mw\n",
@@ -2938,7 +2938,7 @@
     "        agc_gov = agc_syg.gov_idx[cond_gov].tolist()\n",
     "        ssa.TurbineGov.set(src='paux0', idx=agc_gov, attr='v',\n",
     "                           value=agc_syg.paux2.values)\n",
-    "        # b.DG; TODO: EV\n",
+    "        # b.DG;\n",
     "        agc_dg = pd.merge(left=agc_table,\n",
     "                          right=ssa_key2,\n",
     "                          on='stg_idx', how='right')\n",
@@ -2946,9 +2946,15 @@
     "        cond_dg = agc_dg.ctrl * agc_dg.dg_idx.astype(bool)\n",
     "        agc_dg_idx = agc_dg.dg_idx[cond_dg].tolist()\n",
     "        ssa.DG.set(src='pext0', idx=agc_dg_idx, attr='v',\n",
-    "                           value=agc_dg.paux2.values)\n",
-    "        \n",
-    "        # --- smooth setpoints --- \n",
+    "                   value=agc_dg.paux2.values)\n",
+    "        # TODO: c.EV;\n",
+    "        agc_ev = pd.merge(left=agc_table,\n",
+    "                          right=ssa_key2,\n",
+    "                          on='stg_idx', how='right')\n",
+    "        agc_ev['paux2'] = agc_ev.paux * agc_ev.gammap\n",
+    "        sse_agc = agc_ev[agc_ev.dg_idx == ev_idx].paux2.values[0]\n",
+    "\n",
+    "        # --- smooth setpoints ---\n",
     "        if idx_ed == 0:\n",
     "            ssp_res['pref'] = ssp_res['p']\n",
     "        else:\n",
@@ -2969,7 +2975,7 @@
     "            cond_gov = ssp_res.controllable & ssp_res.gov_idx.astype(bool)\n",
     "            ssa.TurbineGov.set(src='pref0', idx=ssp_res.gov_idx[cond_gov].tolist(),\n",
     "                               attr='v', value=ssp_res.pref[cond_gov].values)\n",
-    "            # update DG setpoints; TODO: EV\n",
+    "            # update DG setpoints;\n",
     "            cond_dg = ssp_res.controllable & ssp_res.dg_idx.astype(bool)\n",
     "            ssa.DG.set(src='pref0', idx=ssp_res.dg_idx[cond_dg].tolist(),\n",
     "                       attr='v', value=ssp_res.pref[cond_dg].values)\n",
@@ -2990,11 +2996,15 @@
     "    else:\n",
     "        # Otherwise, alter Ppf and Qpf\n",
     "        ssa.PQ.set(src='Ppf', idx=ssa_pq_idx, attr='v',\n",
-    "                    value=ssa_p0 * d_syn['s10'].iloc[end_time])\n",
+    "                   value=ssa_p0 * d_syn['s10'].iloc[end_time])\n",
     "        ssa.PQ.set(src='Qpf', idx=ssa_pq_idx, attr='v',\n",
-    "                    value=ssa_q0 * d_syn['s10'].iloc[end_time])\n",
-    "        # TODO: EVA run\n",
-    "        \n",
+    "                   value=ssa_q0 * d_syn['s10'].iloc[end_time])\n",
+    "        # TODO: EV\n",
+    "        sse.run(tf = 10+end_time/3600, Pi=sse_agc, is_update=True)\n",
+    "        sse.report(is_report=False)\n",
+    "        ssa.DG.set(src='pref0', idx=ev_idx,\n",
+    "                    attr='v', value=sse.Ptc)\n",
+    "\n",
     "    # RUN TDS\n",
     "    ssa.TDS.config.tf = end_time\n",
     "    if not end_time == 0:\n",
@@ -3006,7 +3016,7 @@
     "    # ACE_raw = 0  # delete when run TDS\n",
     "    # break loop if TDS run into error\n",
     "    if ssa.exit_code != 0:\n",
-    "        raise ValueError(f\"TDS error! Exit with {ssa.exit_code}, end at {end_time}s.\")"
+    "        raise ValueError(f\"TDS error! Exit with {ssa.exit_code}, end at {end_time}s.\")\n"
    ]
   },
   {
