--- a/jwang/notes2/test_ev_ssm.ipynb
+++ b/jwang/notes2/test_ev_ssm.ipynb
@@ -78,6 +78,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "EVA MCS: 100%|██████████| 10/10 [00:04<00:00,  2.44it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sse.run(tf=10 + 10/3600, disable=False, Pi=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.29999999999999993"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sse.Pr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sse.g_frc()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
