Run co-sim with EV shutdown

--- a/jwang/notes2/co-sim_ieee39.ipynb
+++ b/jwang/notes2/co-sim_ieee39.ipynb
@@ -66533,9 +66533,9 @@
    "hash": "ef6cb5c8d99d66a3614f491d51fd40cd94c9138687df3d2045e3a510da5efc66"
   },
   "kernelspec": {
-   "display_name": "Python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "andes"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
