--- a/jwang/notes2/load_syn.ipynb
+++ b/jwang/notes2/load_syn.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +64,27 @@
     "# ace[\"utc_time\"] = ace[\"utc_time\"].dt.strftime('%H:%M:%S')\n",
     "\n",
     "ace.sort_values(by=\"utc_time\", inplace=True)\n",
-    "ace.reset_index(inplace=True, drop=True)"
+    "ace.reset_index(inplace=True, drop=True)\n",
+    "\n",
+    "# interpolate ACE to 3600s with 1s interval\n",
+    "\n",
+    "aces = pd.DataFrame()\n",
+    "aces['time'] = list(range(0, 3610, 15))  # the den should be the poitns within an hour\n",
+    "aces['ace'] = ace['ace'].iloc[0:aces.shape[0]].values\n",
+    "\n",
+    "af = interp1d(aces['time'], aces['ace'])\n",
+    "\n",
+    "asyn = pd.DataFrame()\n",
+    "asyn['time'] = range(3600)\n",
+    "asyn['ace'] = af(np.array(range(3600)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -222,10 +241,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "750181ab3b727a2e6d1f5a043fc0cae3ee9b8f7684c9bfb1793857c8ebb93910"
+   "hash": "ef6cb5c8d99d66a3614f491d51fd40cd94c9138687df3d2045e3a510da5efc66"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 (conda)",
+   "display_name": "Python 3.9.12 ('andes')",
    "language": "python",
    "name": "python3"
   },
