--- a/jwang/notes2/test_pp.ipynb
+++ b/jwang/notes2/test_pp.ipynb
@@ -18,25 +18,37 @@
    "outputs": [],
    "source": [
     "import andes\n",
-    "from andes.interop.pandapower import to_pandapower\n",
+    "from andes.interop.pandapower import to_pandapower, make_GSF\n",
     "import pandapower as pp\n",
     "\n",
     "from numpy import pi\n",
     "from andes.shared import pd, rad2deg, deg2rad\n",
     "\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "import andes.interop.pandapower as adpp\n",
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !andes run '/Users/jinningwang/Documents/work/andes/jwang/case/case2000.m' --convert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7.1.post211.dev0+gf7c87e8d\n",
+      "1.7.1.post212.dev0+g3dd1423c\n",
       "2.8.0\n"
      ]
     }
@@ -48,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-20T14:50:33.843520Z",
@@ -61,14 +73,21 @@
      "shell.execute_reply": "2021-09-26T22:41:59.780928Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating code for 1 models on 8 processes.\n"
+     ]
+    }
+   ],
    "source": [
     "# ss0 is used for PP conversion\n",
-    "dir_path = os.path.abspath('..')\n",
     "\n",
-    "case_path = '/case/case2000.xlsx'\n",
-    "case = dir_path + case_path\n",
-    "ssa = andes.load(case,\n",
+    "case2k = '/Users/jinningwang/Documents/work/andes/jwang/case/case2000.xlsx'\n",
+    "case14 = andes.get_case('ieee14/ieee14_ac8b.xlsx')\n",
+    "ssa = andes.load(case2k,\n",
     "                 setup=True,\n",
     "                 no_output=True,\n",
     "                 default_config=False)"
@@ -76,32 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'adpp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/jinningwang/Documents/work/andes/jwang/notes2/test_pp.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jinningwang/Documents/work/andes/jwang/notes2/test_pp.ipynb#ch0000074?line=0'>1</a>\u001b[0m ssp \u001b[39m=\u001b[39m adpp\u001b[39m.\u001b[39mto_pandapower(ssa, verify\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'adpp' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ssp = to_pandapower(ssa, verify=True)"
+    "ssp = to_pandapower(ssa, verify=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssp.res_gen"
+    "gsf = make_GSF(ssp)"
    ]
   }
  ],
